[gd_scene load_steps=17 format=3 uid="uid://bukvvhx5dolxy"]

[ext_resource type="Texture2D" uid="uid://bfx7tfangiw06" path="res://assets/img/test/def_1.png" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://cmwq34csjm0cp" path="res://assets/img/background.png" id="2_7mycd"]
[ext_resource type="Script" uid="uid://bw81x7tipex3u" path="res://main.gd" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://puxxlbla6kkm" path="res://assets/3d_model/BOSS.glb" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://bds0lbtgn5m56" path="res://assets/img/test/def_2.png" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://swbgdutw6k83" path="res://assets/img/test/def_3.png" id="4_7mycd"]
[ext_resource type="Theme" uid="uid://cfu7ugxyqltwc" path="res://main_theme.tres" id="6_7mycd"]
[ext_resource type="FontFile" uid="uid://dqhnvcxigxgq6" path="res://assets/fonts/Pokemon Classic.ttf" id="8_5vw27"]
[ext_resource type="AudioStream" uid="uid://4r2i5ukjyloq" path="res://assets/music/background_music_main.mp3" id="9_kek77"]

[sub_resource type="ViewportTexture" id="ViewportTexture_272bh"]
viewport_path = NodePath("Control/Node3D/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_7mycd"]
font = ExtResource("8_5vw27")
font_size = 20
outline_color = Color(0.266667, 0.301961, 0.572549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kek77"]

[sub_resource type="LabelSettings" id="LabelSettings_5vw27"]

[sub_resource type="LabelSettings" id="LabelSettings_272bh"]
font = ExtResource("8_5vw27")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_4c57u"]
font_color = Color(0.541176, 0.168627, 0.886275, 1)

[sub_resource type="LabelSettings" id="LabelSettings_efxa6"]
font = ExtResource("8_5vw27")
font_size = 10
outline_size = 7
outline_color = Color(0.356863, 0.235294, 0.509804, 1)
shadow_size = 5

[node name="Main" type="Node2D"]
script = ExtResource("3_7mycd")

[node name="background" type="TextureRect" parent="."]
offset_right = 1917.0
offset_bottom = 1085.0
scale = Vector2(0.6, 0.6)
theme = ExtResource("6_7mycd")
texture = ExtResource("2_7mycd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 1156.0
offset_bottom = 654.0
theme = ExtResource("6_7mycd")

[node name="Node3D" type="Node3D" parent="Control"]

[node name="SubViewport" type="SubViewport" parent="Control/Node3D"]
transparent_bg = true

[node name="Camera3D" type="Camera3D" parent="Control/Node3D/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.34893, 3.73434)

[node name="BOSS" parent="Control/Node3D/SubViewport" instance=ExtResource("3_272bh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0833777, 0.0569, 0.205497)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Control/Node3D/SubViewport"]

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 327.0
offset_top = 8.0
offset_right = 839.0
offset_bottom = 520.0
theme = ExtResource("6_7mycd")
texture = SubResource("ViewportTexture_272bh")

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="EasyButton" type="TextureButton" parent="Node2D"]
offset_top = 589.0
offset_right = 400.0
offset_bottom = 889.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("6_7mycd")
texture_normal = ExtResource("2_1bvp3")

[node name="MediumButton" type="TextureButton" parent="Node2D"]
offset_left = 64.0
offset_top = 585.0
offset_right = 464.0
offset_bottom = 885.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("6_7mycd")
texture_normal = ExtResource("3_lquwl")

[node name="HardButton" type="TextureButton" parent="Node2D"]
offset_left = 127.0
offset_top = 588.0
offset_right = 527.0
offset_bottom = 888.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("6_7mycd")
texture_normal = ExtResource("4_7mycd")

[node name="DiceResult" type="Sprite2D" parent="."]

[node name="DialogBox" type="Panel" parent="."]
offset_left = 275.0
offset_top = 10.0
offset_right = 315.0
offset_bottom = 50.0
scale = Vector2(15.5492, 2.23188)
theme = ExtResource("6_7mycd")

[node name="Label" type="Label" parent="DialogBox"]
layout_mode = 0
offset_left = 2.7011
offset_top = 6.27273
offset_right = 711.701
offset_bottom = 119.273
scale = Vector2(0.05, 0.25)
theme = ExtResource("6_7mycd")
label_settings = SubResource("LabelSettings_7mycd")
autowrap_mode = 3
justification_flags = 235

[node name="StatPanel" type="Panel" parent="."]
offset_left = 34.0
offset_top = 191.0
offset_right = 74.0
offset_bottom = 231.0
scale = Vector2(3.59045, 3.6056)
theme = ExtResource("6_7mycd")

[node name="rollingForLabel" type="Label" parent="StatPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 161.0
offset_bottom = 107.0
scale = Vector2(0.236, 0.142)
theme = ExtResource("6_7mycd")
label_settings = SubResource("LabelSettings_kek77")
autowrap_mode = 3

[node name="statLabel" type="Label" parent="StatPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 20.0
offset_right = 328.0
offset_bottom = 129.0
scale = Vector2(0.116, 0.173)
theme = ExtResource("6_7mycd")
theme_override_font_sizes/font_size = 0
label_settings = SubResource("LabelSettings_5vw27")
autowrap_mode = 3

[node name="dicePanel" type="Panel" parent="."]
offset_left = 540.0
offset_top = 183.0
offset_right = 643.0
offset_bottom = 271.0
theme = ExtResource("6_7mycd")

[node name="Label" type="Label" parent="dicePanel"]
layout_mode = 0
offset_left = 0.99999
offset_right = 227.0
offset_bottom = 193.0
scale = Vector2(0.455, 0.455)
theme = ExtResource("6_7mycd")
label_settings = SubResource("LabelSettings_272bh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BossNamePanel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 73.0
offset_right = 210.0
offset_bottom = 153.0
theme = ExtResource("6_7mycd")

[node name="Label" type="Label" parent="BossNamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.541176, 0.168627, 0.886275, 1)
theme_override_colors/font_shadow_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
label_settings = SubResource("LabelSettings_4c57u")
horizontal_alignment = 1
autowrap_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kek77")

[node name="Narrative_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="DescriptionPanel" type="VBoxContainer" parent="Narrative_control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 522.0
offset_top = 523.0
offset_right = 640.0
offset_bottom = 627.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_7mycd")

[node name="DescriptionLabel" type="Label" parent="Narrative_control/DescriptionPanel"]
layout_mode = 2
theme = ExtResource("6_7mycd")
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 50
label_settings = SubResource("LabelSettings_efxa6")
autowrap_mode = 3

[node name="OptionsContainer" type="VBoxContainer" parent="Narrative_control/DescriptionPanel"]
layout_mode = 2
theme = ExtResource("6_7mycd")

[node name="EasyButton" type="Button" parent="Narrative_control/DescriptionPanel/OptionsContainer"]
layout_mode = 2
theme = ExtResource("6_7mycd")
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 10

[node name="MediumButton" type="Button" parent="Narrative_control/DescriptionPanel/OptionsContainer"]
layout_mode = 2
theme = ExtResource("6_7mycd")
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 10

[node name="HardButton" type="Button" parent="Narrative_control/DescriptionPanel/OptionsContainer"]
layout_mode = 2
theme = ExtResource("6_7mycd")
theme_override_fonts/font = ExtResource("8_5vw27")
theme_override_font_sizes/font_size = 10
